# Agentic-Innovation-Optimization

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: BUILD.md  CLIENT_ZERO.md  FORSCHUNGSDESIGN.md  LOUS_FRAMEWORK_V3.md  PHASE2_TRACKER.md  PROJECT_LOG.md  PROJEKTARBEIT.md  QUALITY_CHECK.md  RECHERCHE_AGENTIC_AI_INNOVATION.md  RECHERCHE_HUMAN_AI_COLLABORATION.md  TODO.md
docs/archive/: LOUS_FRAMEWORK.md  LOUS_FRAMEWORK_V2.md
docs/material/: ABSTRACT.md  AIP_Kernbeitrag_Fokussierung.docx  FRAMEWORK_ANALYSE.md  GESPRAECHSVORBEREITUNG_PROF.md  RECHERCHE_ADAPTIVE_FRAMEWORKS.md  RECHERCHE_AI_ETHICS_GOVERNANCE.md  RECHERCHE_MULTI_AGENT_SYSTEME.md
outputs/datapulse_analytics/: phase_a_20260430_225037.json  phase_a_20260502_005631.json
scenarios/: saas_stagnation.json
src/aip/: __init__.py  __main__.py  config.py  graph.py  ofh.py  state.py  utils.py
src/aip/agents/: __init__.py  base.py
src/aip/agents/prompts/: audit.md  gap_detector.md  market_scanner.md
src/aip/layers/: __init__.py
src/aip/models/: __init__.py  bmc.py  innovation.py  phase_output.py  startup.py
src/aip/phases/: __init__.py  erkennen.py
tests/: test_config.py  test_models.py  test_ofh.py  test_utils.py
