[project]
name = "aip-framework"
version = "0.1.0"
description = "Agentic Innovation Process (AIP) — Multi-Agent Framework for Startup Innovation Optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lou Lazay" },
]

dependencies = [
    "langgraph>=0.3,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain-core>=0.3,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
aip = "aip.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/aip"]

[tool.hatch.build.targets.wheel]
packages = ["src/aip"]
sources = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
